--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <body>
 
 
-    <div class="container navbar fixed-top navbar-expand-sm header justify-content-md-start">
+    <div class="container navbar fixed-top navbar-expand-sm header">
         <h1>Mascot Collector</h1>
         <h6>By: Joe Plukarski</h6>
     </div>
 
-    <div class="gameBox container justify-content-md-start">
-        <div class="rules justify-content-md-start col-md-6">
+    <div class="gameBox container">
+        <div class="rules col-md-6">
             <div>You will be given a random number at the start of the game</div>
             <div>There are four mascots below. By clicking on a mascot you will add a specific amount of points to your score</div>
             <div>You win the game by matching your total score to the random number</div>
